<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_mute_dialog"
        android:icon="@drawable/ic_mute"
        android:title="@string/mute"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_delete_dialog"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/item_contacts"
        android:icon="@drawable/ic_contacts"
        android:title="@string/contacts" />
    <item
        android:id="@+id/item_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/log_out" />
</menu>