<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/delete_totally_textView"
            style="@style/ripple_style.delete_dialog"
            android:layout_marginEnd="16dp"
            android:text="@string/delete_totally"
            app:layout_constraintBottom_toBottomOf="@+id/cancel_textView"
            app:layout_constraintEnd_toStartOf="@+id/delete_textView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/delete_messages"
            app:layout_constraintTop_toTopOf="@+id/cancel_textView"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/delete_textView"
            style="@style/ripple_style.delete_dialog"
            android:text="@string/delete_for_me"
            app:layout_constraintBottom_toBottomOf="@+id/cancel_textView"
            app:layout_constraintEnd_toStartOf="@+id/cancel_textView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/delete_totally_textView"
            app:layout_constraintTop_toTopOf="@+id/cancel_textView" />

        <TextView
            android:id="@+id/cancel_textView"
            style="@style/ripple_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@android:string/cancel"
            android:textColor="#009688"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/delete_textView"
            app:layout_constraintTop_toBottomOf="@+id/delete_messages" />

        <TextView
            android:id="@+id/delete_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="120dp"
            android:text="@string/delete_messages"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>